ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 51413 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 51413 -j ACCEPT
-A ufw6-user-input -p udp --dport 51413 -j ACCEPT

### tuple ### allow any 6891 ::/0 6881 ::/0 in
-A ufw6-user-input -p tcp --dport 6891 --sport 6881 -j ACCEPT
-A ufw6-user-input -p udp --dport 6891 --sport 6881 -j ACCEPT

### tuple ### limit tcp 22 ::/0 any ::/0 SSH - in
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set -m comment --comment 'dapp_SSH'
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw6-user-limit -m comment --comment 'dapp_SSH'
-A ufw6-user-input -p tcp --dport 22 -j ufw6-user-limit-accept -m comment --comment 'dapp_SSH'

### END RULES ###

### LOGGING ###
-I ufw6-user-logging-input -j RETURN
-I ufw6-user-logging-output -j RETURN
-I ufw6-user-logging-forward -j RETURN
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
